# rnnoise

./: CMakeLists.txt
include/: rnnoise-nu.h
src/: denoise.c  rnn.c  rnn_data.c  rnn_data.h  rnn_reader.c
src/models/: bd.c  cb.c  lq.c  mp.c  sh.c
